# faithbench-neg

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  TAXONOMY.md  pyproject.toml
data/seed/: example-0001.json  example-0002.json
data/seed_code/: example-code-0001.json  gen-absolute.json  gen-add.json  gen-inc.json  gen-is_even.json  gen-last_char.json  gen-maximum.json  gen-mul.json  gen-reverse_str.json  gen-square.json  gen-triple.json
data/seed_tool_call/: example-tc-0001.json  gen-book_flight.json  gen-convert_currency.json  gen-create_event.json  gen-get_weather.json  gen-search_docs.json  gen-send_email.json  gen-set_timer.json  gen-translate.json
faithbench/: __init__.py  cli.py  core.py  mutate.py  scoring.py
faithbench/adapters/: __init__.py
faithbench/domains/: __init__.py  code.py  lean_math.py  tool_call.py
faithbench/lint/: __init__.py  diff.py
schema/: item.schema.json
scripts/: gen_code_seed.py  gen_tool_call_seed.py
tests/: test_code_domain.py  test_domains.py  test_judge.py  test_lint.py  test_scoring.py
